name:                safe-prelude
version:             0.1.0.0
synopsis: A Haskell prelude optimized for safety
description:         Please see README.md
homepage:            https://github.com/snoyberg/safe-prelude#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Prelude
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SafePrelude
  build-depends:       base >= 4.7.0.2 && < 4.10
                     , bytestring
                     , text
                     , containers
                     , unordered-containers
                     , safe-exceptions >= 0.1.4.0
                     , transformers
                     , mtl
                     , say
                     , deepseq
                     , semigroups
                     , hashable
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snoyberg/safe-prelude
